2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added.  instructs CVS to ignore .asv files.
	* evt_GUI.m:  can now load several specific and selected files at once.  not heavily tested yet, but seems to function as expected.

2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: updated to use new "filter_video_tracking" function.

2011-06-30  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: minor optimizations to plotting code.
	* evt_GUI.fig: same.

2011-06-30  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m:  removed dummy variable references, i.e. the squiggle "~", because lots of users don't have matlab with a late enough release version to use that feature.

2011-06-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.fig:  added msd2pt and GSER2pt figures.
	* evt_GUI.m: same.
	* evt_run_microrheology2P.m:  added.  wraps external 2pt microrheology code so that evt_GUI can use it.

2011-05-19  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.fig:  added Diffusivity as a option on the AUXfig.
	* evt_gui.m: same.
	* TODO.txt:  updated.

2011-02-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.fig:  added in text box where user enters the number of time scales, ntau, for MSD/GSER plots. 
	* evt_GUI.m: uses ntau to automatically generate an MSD or GSER plot with evenly spaced time scales that extend from the minimum tau to maximum tau.  The number 'ntau' is not strictly obeyed, i.e. repeated taus are filtered out.
	* TODO: updated.

2011-02-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: the windows for MSD and GSER plots are now equally spaced for the loglog representation.

2010-09-30  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: 
		- MIPs as 'tif' files are supported.  
		- added support for selecting individual msd paths.  Doesn't function yet, but doesn't screw anything else up either.
		- added the ability to 'neutralize offsets' in [x y] vs. t plot.
		- changed default windowsize vector